--- a/calculator/style.css
+++ b/calculator/style.css
@@ -13,7 +13,7 @@ body {
   
   .calculator {
     position: absolute;
-    background-color: 000;
+    /* background-color: 000; */
     width: 280px;;
     padding: 20px;
     font-family: 'Roboto';
